# gpu-study-group-leaderboard

./: .gitignore  README.md  kernel_leaderboard_plan.md  modal_app.py  pyproject.toml  submit.py  week01_vectoradd_baseline.cu
problems/01_vectoradd/: harness.cu  stub.cu
problems/01_vectoradd/solutions/: 01_naive.cu  02_float4.cu  03_grid_stride.cu
problems/02_matmul_naive/: harness.cu  stub.cu
problems/02_matmul_naive/solutions/: 01_naive.cu
problems/03_grayscale/: harness.cu  stub.cu
problems/03_grayscale/solutions/: 01_naive.cu
problems/04_matmul_tiled/: harness.cu  stub.cu
problems/04_matmul_tiled/solutions/: 01_tiled.cu  02_tiled_32x32.cu
problems/05_conv2d/: harness.cu  stub.cu
problems/05_conv2d/solutions/: 01_naive.cu  02_tiled.cu
problems/06_stencil/: harness.cu  stub.cu
problems/06_stencil/solutions/: 01_naive.cu  02_shared_memory.cu
problems/07_histogram/: harness.cu  stub.cu
problems/07_histogram/solutions/: 01_naive.cu  02_privatized.cu  03_coarsened.cu
problems/08_reduction/: harness.cu  stub.cu
problems/08_reduction/solutions/: 01_naive.cu  02_convergent.cu  03_coarsened.cu
problems/09_scan/: harness.cu  stub.cu
problems/09_scan/solutions/: 01_kogge_stone.cu  02_brent_kung.cu
problems/10_merge/: harness.cu  stub.cu
problems/10_merge/solutions/: 01_basic.cu
problems/11_sort/: harness.cu  stub.cu
problems/11_sort/solutions/: 01_bitonic.cu
static/: index.html
